--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         <button class="login-btn" id="login">Login</button>
         <h1>iMagine Store</h1>
         <div class="shopping">
-          <img src="./image/shopping-cart-outline-svgrepo-com.svg" />
+          <img
+            src="./image/shopping-cart-outline-svgrepo-com.svg"
+            alt="cart logo"
+          />
           <span class="quantity">0</span>
         </div>
         <div style="display: flex; flex-direction: column">
-          <img style="width: 5%" src="./image/person.svg" />
+          <img style="width: 5%" src="./image/person.svg" alt="person" />
           <span id="user"></span>
         </div>
       </header>
